# cpp-course-2023

./: .clang-format  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .vscode  CMakeLists.txt  README.md
.github/workflows/: build.yml  publish-slides.yml  slides.yml
01_01_introduction/: CMakeLists.txt
01_02_infrastructure_resources/: CMakeLists.txt  infrastructure_resources.md
01_02_infrastructure_resources/code/cpp-example/: .gitignore  CMakeLists.txt  README.md  tutorial.cxx
01_02_infrastructure_resources/code/cpp-example/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  MathFunctions.h  test_MathFunctions.cxx
01_03_initialization_etc/: CMakeLists.txt  Makefile  initialization_etc.md
01_03_initialization_etc/attachments/: value-categories-02-move-semantic.excalidraw  value-categories-03-rvalue.excalidraw  value-categories-04-general.excalidraw
01_03_initialization_etc/code/: raii_buffer.cpp
01_03_raii_move-semantics/: CMakeLists.txt  raii_move-semantic.md
01_03_raii_move-semantics/attachments/: value-categories-00-l-vs-r.excalidraw  value-categories-01-l-vs-r-move.excalidraw  value-categories-03-rvalue.excalidraw
01_04_generic_programming_1_templates/: CMakeLists.txt  generic_programming_part1.md  templates_part1.md
01_04_generic_programming_1_templates/code/: debug_print_specializations.cpp  demangle_helper.hpp  fold_print.cpp  type_list.hpp
01_04_optional_variant_tuple/: CMakeLists.txt  optional_variant_tuple.md
02_00_optional_variant_tuple/: CMakeLists.txt  optional_variant_tuple.md
02_00_optional_variant_tuple/code/: ast.cpp  tuple_storage.cpp
02_01_functional_generic_utilities/: CMakeLists.txt  functional_generic_utilities.md
02_01_functional_generic_utilities/code/: apply_tuple_bug.cpp  ast.cpp  empty_variant_optional.cpp  lambda_capture.cpp  tuple_storage.cpp  tuple_storage_apply.cpp
02_01_lambdas_etc/: CMakeLists.txt  lambdas_etc.md
02_01_lambdas_etc/code/: apply.cpp  apply_tuple_bug.cpp  tuple_storage_apply.cpp
02_02_generic_programming_part1/: CMakeLists.txt  templates_part1.md
02_03_generic_programming_part2/: CMakeLists.txt  generic_programming_part2.md  generic_programming_part2_concepts.md  generic_programming_part2_cpos.md
02_03_generic_programming_part2/code/: swap.cpp  swap_cpo.cpp  swap_tag_invoke.cpp
02_04_exercises/: CMakeLists.txt  Makefile
02_05_example_concept_based_design/: CMakeLists.txt  example_concept_based_design.md
02_05_example_concept_based_design/code/: cursor.cpp  cursor.hpp  ex1_filter.cpp  ex2_to_vector.cpp  ex3_vector_as_cursor.cpp  ex4_cursor_algorithm_concept.cpp  sol1_filter.cpp  sol2_to_vector.cpp  sol3_vector_as_cursor.cpp  sol4_cursor_algorithm_concept.cpp  test_cursor.cpp
02_05_examples_sid/: CMakeLists.txt
02_05_examples_sid/code/: cursor.cpp  sid.cpp
03_01_data_oriented_design/: CMakeLists.txt  data_oriented_design.md  data_oriented_tips.md
03_01_data_oriented_design/code/: cache_block_size.cpp  cache_false_sharing.cpp  dram_block_size.cpp  dram_burst_mode.cpp  dram_coherence.cpp  dram_same_row.cpp  false_sharing.cpp
03_01_data_oriented_design/code/nbody/: CMakeLists.txt  common.hpp  dod.cpp  dod.hpp  main.cpp  oop.cpp  oop.hpp
03_01_data_oriented_design/examples/: CMakeLists.txt  struct_layout.cpp
03_01_data_oriented_design/images/: cache_prefetch_latency.drawio  data_access_patterns.drawio
03_02_data_access_algorithms_ranges/: CMakeLists.txt  containers_algorithms_ranges.md  p1_containers_algorithms_ranges.md
03_02_data_access_algorithms_ranges/code/: ranges_snippets.cpp
03_02b_mdspan/: CMakeLists.txt  mdspan.md
03_02b_mdspan/code/: mdspan.cpp
03_03_examples_something_something/: CMakeLists.txt  examples_something_something.md
03_04_future/: CMakeLists.txt  coroutines.md  future.md
03_04_future/images/: coroutines.drawio
0x_0x_coroutines/: CMakeLists.txt  coroutines.md
0x_0x_coroutines/code/: task.cpp
cmake/: Marp.cmake
slides-support/: README.md
slides-support/themes/: cscs.css
utility/: line_graph.py
